src/global.css
.ant-btn-primary {
  --btn-color: #3d74aa;
  color: #fff !important;
  background-color: var(--btn-color) !important;
  border-color: var(--btn-color) !important;
  text-shadow: 0 -1px 0 rgba(0, 0, 0, .12);
  -webkit-box-shadow: 0 2px 0 rgba(0, 0, 0, .045);
  box-shadow: 0 2px 0 rgba(0, 0, 0, .045);
}

a {
  color: #4183C4;
}

.h-ellipsis {
  overflow: hidden;
  text-overflow: ellipsis;
  display: -webkit-box;
  -webkit-line-clamp: 1;
  -webkit-box-orient: vertical;
}

